datasets/dataset_txt/flask/flask_565.txt
henniss commented on 27 Jul 2017
Example:
#min.py
from flask import Flask
app = Flask(__name__)


@app.route('/')
def hello_world():
FLASK_DEBUG=1 FLASK_APP=min.py python -m flask run 
Expected Behavior
Traceback (most recent call last):
  File "/home/henniss/envs/min-flask/lib/python3.6/site-packages/flask/cli.py", line 189, in __call__
    rv = self._load_unlocked()
  File "/home/henniss/envs/min-flask/lib/python3.6/site-packages/flask/cli.py", line 176, in _load_unlocked
    self._app = rv = self.loader()
  File "/home/henniss/envs/min-flask/lib/python3.6/site-packages/flask/cli.py", line 237, in load_app
    rv = locate_app(self.app_import_path)
  File "/home/henniss/envs/min-flask/lib/python3.6/site-packages/flask/cli.py", line 90, in locate_app
    __import__(module)
  File "/home/henniss/gitlab/min-flask/min.py", line 6
    def hello_world():
                     ^
SyntaxError: unexpected EOF while parsing
Actual Behavior
Traceback (most recent call last):
  File "/home/henniss/envs/min-flask/lib/python3.6/site-packages/flask/cli.py", line 189, in __call__
    rv = self._load_unlocked()
  File "/home/henniss/envs/min-flask/lib/python3.6/site-packages/flask/cli.py", line 176, in _load_unlocked
    self._app = rv = self.loader()
  File "/home/henniss/envs/min-flask/lib/python3.6/site-packages/flask/cli.py", line 237, in load_app
    rv = locate_app(self.app_import_path)
  File "/home/henniss/envs/min-flask/lib/python3.6/site-packages/flask/cli.py", line 90, in locate_app
    __import__(module)
File "/home/henniss/gitlab/min-flask/min.py", line 6
    def hello_world():
                     ^
SyntaxError: unexpected EOF while parsing
Note incorrect indentation on the 4th line from the end.
I know this seems super pedantic, but it seems to mean that flask-failsafe won't detect that it needs to reload when min.py changes, since it doesn't see that portion of the traceback.
Environment
Python version: 3.6.1
Flask version: 0.12.2
Werkzeug version: 0.12.2